# game-physics-template

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Primitives.cpp  Primitives.h  README.md  Renderer.cpp  Renderer.h  ResourceManager.h  Simulator.cpp  Simulator.h  guide.md  imgui.ini  main.cpp  tmp_imgui.cpp
.github/workflows/: cmake-multi-platform.yml
Scenes/: CollisionDetection.cpp  CollisionDetection.h  CollisionInfo.h  Grid.cpp  Grid.h  RigidBody.h  Rigidbody.cpp  Rigidbody.h  Scene.cpp  Scene.h  Scene1.cpp  Scene1.h  Scene1_SingleStep.h  Scene2.cpp  Scene2.h  Scene2_Simulation.h  Scene3.cpp  Scene3.h  Scene3_Collision.h  Scene4.cpp  Scene4.h  Scene4_ComplexSimulation.h  SceneIndex.h
docs/: Doxyfile
docs/html/: _camera_8h_source.html  _colormap_8h_source.html  _primitives_8h_source.html  _renderer_8h_source.html  _resource_manager_8h_source.html  _simulator_8h_source.html  annotated.html  annotated_dup.js  class_camera-members.html  class_camera.html  class_colormap-members.html  class_colormap.html  class_renderer-members.html  class_renderer.html  class_renderer.js  class_resource_manager-members.html  class_resource_manager.html  class_resource_manager.js  class_simulator-members.html  class_simulator.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  index.html  navtreedata.js  struct_renderer_1_1_lighting_uniforms-members.html  struct_renderer_1_1_lighting_uniforms.html  struct_renderer_1_1_render_uniforms-members.html  struct_renderer_1_1_render_uniforms.html  struct_resource_manager_1_1_image-members.html  struct_resource_manager_1_1_image.html  struct_resource_manager_1_1_image_attributes-members.html  struct_resource_manager_1_1_image_attributes.html  struct_resource_manager_1_1_instanced_vertex_attributes-members.html  struct_resource_manager_1_1_instanced_vertex_attributes.html  struct_resource_manager_1_1_line_vertex_attributes-members.html  struct_resource_manager_1_1_line_vertex_attributes.html  struct_resource_manager_1_1_primitive_vertex_attributes-members.html  struct_resource_manager_1_1_primitive_vertex_attributes.html  (+2 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_1.js  classes_6.js
pipelines/: ImagePipeline.cpp  ImagePipeline.h  InstancingPipeline.cpp  InstancingPipeline.h  LinePipeline.cpp  LinePipeline.h  PostProcessingPipeline.cpp  PostProcessingPipeline.h
resources/: colormaps.txt  config.h.in  image_shader.wgsl  instancing_shader.wgsl  line_shader.wgsl  post_processing.wgsl  shader.wgsl
src/: Camera.cpp  Camera.h  Colormap.cpp  Colormap.h  PathFinder.cpp  PathFinder.h  Primitives.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Simulator.cpp  Simulator.h  implementations.cpp  main.cpp
src/pipelines/: ImagePipeline.cpp  ImagePipeline.h  InstancingPipeline.cpp  InstancingPipeline.h  LinePipeline.cpp  LinePipeline.h  Pipeline.cpp  Pipeline.h  PostProcessingPipeline.cpp  PostProcessingPipeline.h
src/util/: CollisionDetection.cpp  CollisionDetection.h  CollisionInfo.h  pcgsolver.h
